UI: BLI_assert failed: blf_font_width_to_rstrlen(), at 'i_tmp == i' #116135

Closed
opened 2023-12-13 12:26:05 +01:00 by Iliya Katushenock · 4 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit hash: fb8bf8b0c8
Worked: (newest version of Blender that worked as expected)

Short description of error
See attached file with assertion stack trace.

Exact steps for others to reproduce the error

  1. Open attached .blend file.
  2. Press Space (to open search) in 3d view.
    Assertion.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit hash: fb8bf8b0c892e3eb5ca920420f6d7e5fb1c5bfd7 Worked: (newest version of Blender that worked as expected) **Short description of error** See attached file with assertion stack trace. **Exact steps for others to reproduce the error** 1. Open attached .blend file. 2. Press `Space` (to open search) in 3d view. Assertion.
Author
Member
@Harley /
Harley Acheson self-assigned this 2023-12-13 18:28:01 +01:00
Member

Not able to recreate this yet. Are there any other steps or configuration needed?

"Press Space (to open search) in 3d view."

By default pressing Space while in 3DView will play the animation.

Not able to recreate this yet. Are there any other steps or configuration needed? > "Press Space (to open search) in 3d view." By default pressing Space while in 3DView will play the animation.
Author
Member

By default pressing Space while in 3DView will play the animation.

Well, yes, or f3.

Yes, also here is C:\WINDOWS\Fonts\segoeui.ttf in Interface Font settings! Should change this, but this is causer of bug...

> By default pressing Space while in 3DView will play the animation. Well, yes, or `f3`. Yes, also here is `C:\WINDOWS\Fonts\segoeui.ttf` in `Interface Font` settings! Should change this, but this is causer of bug...
Member

Yes, also here is C:\WINDOWS\Fonts\segoeui.ttf in Interface Font settings! Should change this, but this is causer of bug...

Oh thanks, will try it with font. That one is made a little odd.

> Yes, also here is `C:\WINDOWS\Fonts\segoeui.ttf` in `Interface Font` settings! Should change this, but this is causer of bug... Oh thanks, will try it with font. That one is made a little odd.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-14 23:19:22 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116135
No description provided.